# yjw_project

./: 1.cpp  2.cpp  3.cpp  Bug_list of Moku project20231130.xlsx  Doris_icm42688.docx  test01
3、详细设计/: 1.X01法兰西开关面板软件概要设计说明书.doc  2.法兰西场景面板老化指导.docx  2.法兰西开关面板ATS详细设计.docx  2.法兰西开关面板软件需求规格说明书SRD.doc  3.卡拉扬ATS设计总结.docx  3.法兰西-场景面板装备指令_220707.xlsx  4.法兰西-开关面板装备指令VN2.xlsx  5.sunflower项目案例分享.docx  5.法兰西开关面板厂测数据备份机制.pptx  6.卡拉扬OTA升级带签名.docx  6.奥斯陆场景面板AT指令_V2.3_220111.xlsx  7.BLE_FOTA APP使用指南.docx  7.奥斯陆开关面板ATS NDM指令表V1.5.xlsx  9.SunFlower厂测指令v2.1.5.xlsx
LHW知识的总结与共享/: 1.1 Ti CC3200使用手册.docx  1.2 Nordic nRF9160 DK 连接云端指引.docx  1.3 Ti CC2640平台手机端OTA升级.docx  1.4 Ti CC2640平台使用btool进行OTA升级.docx  1.5 Atmosic ATM2201烧录指南.docx  1.6 Debug for RT600.docx  1.7 Flash for RT600.docx  2.1 Atmosic EXTX项目问题改善.docx  3.1 Bosch isite项目总结与沉淀.docx  3.2 P&G Tracker项目总结与沉淀.docx  3.3 Ti CC2640简单外围设备开发总结.docx  3.4 Softbank button项目总结与沉淀.docx  4.1 BLE总结.docx  ~$4 Softbank button项目总结与沉淀.docx
LHW详细设计/: 1.1.1 EXTxx软件需求规格说明书SRD.doc  1.1.2 EXTxx软件详细设计说明书.doc  1.1.3 EXTxx_BLE通信协议_V2.xlsx  1.1.4 EXTxx_RF测试_ATS厂测指令_V5.xlsx  1.2.1 Sunflow_Profile_v1.2.xlsx  1.2.2 OTA协议说明_V0.2.docx  1.2.3 文件传输协议说明_V0.2.docx  1.2.4 主题应用协议_V0.1.docx  1.3.1 J项目ES样机软件详细设计说明书.doc  1.4.1 Bosch_isite_通信协议_V0.1.xlsx  1.5.1 P&G_Tracker_协议_V0.2.xlsx
Moku/: github-recovery-codes.txt
UDP/: 1.c  (+4 more)
ats/: .clang-format  CMakeLists.txt  build.sh
ats/include/: ats.h  ats_chn.h
ats/module/: ats_hw_test.c  ats_main_board.c  ats_rf.c
ats/src/: ats.c  ats_chn.c  main.c
ats/utils/: assert_check.h  dlist.h  error_code.h  log.h
(+51 files in other folders)
